--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,8 +1,5 @@
 .card {
     width: 450px;
-    /* display: flex;
-    flex-direction: column; */
-    /* justify-content: center; */
     padding-top: 10px;
     border: 2px solid black;
     border-radius: 10px;
@@ -49,9 +46,8 @@
     justify-content: center;
     align-items: center;
     font-size: 27px;
-
     padding: 5px;
-    width: calc(100% - 40px);
+    width: 100%;
 }
 
 .listItem:not(:last-child) {
